syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";
option java_package = "com.example.demot1.grpc.dto.modle";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}